2009-11-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/tclIndex  (regenerated) to reflect various changes
	                    in safe.tcl and other files.

2009-11-23  Kevin Kenny  <kennykb@acm.org>

	* tests/fCmd.test (fCmd-30.1): Changed registry location of the
	'My Documents' folder to the one that's correct for Windows 2000,
	XP, Server 2003, Vista, Server 2008, and Windows 7.
	(See http://support.microsoft.com/kb/310746)	
	
2009-11-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinDde.c         #undef STATIC_BUILD, in order to make sure that
	* win/tclWinReg.c         Xxxxx_Init is always exported even when Tcl is
	* generic/tclTest.c       built static (otherwise we cannot create a DLL).
	* generic/tclThreadTest.c Make all functions static, except TclThread_Init.
	* tests/fCmd.test         Enable fCmd-30.1 when registry is available.
	* win/tcl.m4              Fix ${SHLIB_LD_LIBS} definition, fix conflicts
	* win/Makefile.in         Simplifications related to tcl.m4 changes.
	* win/configure.in        between static libraries and import library on windows.
	* win/configure           (regenerated)
	* win/makefile.vc         Add stub library to necessary link lines

2009-11-23  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclThreadTest.c (NewTestThread): [Bug 2901803]
	Further machinations to get NewTestThread actually to launch
	the thread, not just compile.
	
2009-11-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclThreadTest.c (NewTestThread): [Bug 2901803]: Fix small
	error in function naming which blocked a threaded test build.

2009-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:	Create tcltest86.dll as dynamic Tcltest
				package.
	* generic/tclTest.c:	Remove extraneous prototypes, follow-up to
	* generic/tclTestObj.c:	[Bug 2883850]
	* tests/chanio.test:	Test-cases for fixed [Bug 2849797]
	* tests/io.test:
	* tests/safe.test:	Fix safe-10.1 and safe-10.4 test cases, making